# Project_14.1

./: README.md  main.py  pyproject.toml
src/: category.py  product.py
tests/: conftest.py  test_category.py  test_product.py
